# haskell-forever

./: README.md  default.nix  haskell-forever.cabal  profiling-shell.nix
app/HaskellForever/IO/: Main.hs
src/HaskellForever/IO/: Main.hs
test/: Main.hs
