cabal-version: 2.1

name:           haskell-forever
version:        0.1.0.0
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/lukasz-golebiewski/haskell-forever

common globals
  ghc-options:
    -Werror
  default-language:
    Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    MultiParamTypeClasses
    TemplateHaskell

library
  import:
      globals
  exposed-modules:
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , transformers
  default-language: Haskell2010

test-suite haskell-forever-test
  import:
      globals
  ghc-options:
      -threaded
  type:
      exitcode-stdio-1.0
  main-is:
      Main.hs
  hs-source-dirs:
      test
  other-modules:
  build-depends:
      haskell-forever

    , base >=4.7 && <5
    , hedgehog
    , transformers
